# remindr

./: Cargo.toml
crates/gpui/: Cargo.toml
crates/gpui/migrations/: 20251208234649_init_database.up.sql
crates/gpui/src/: lib.rs  main.rs
crates/gpui/src/app/: mod.rs  remindr.rs
crates/gpui/src/app/components/: mod.rs  node_config_menu.rs  node_renderer.rs  rich_text.rs  sidebar.rs  slash_menu.rs
crates/gpui/src/app/components/nodes/: element.rs  menu_provider.rs  mod.rs  node.rs
crates/gpui/src/app/screens/: document_screen.rs  home_screen.rs  mod.rs
crates/gpui/src/app/states/: app_state.rs  document_state.rs  mod.rs  node_state.rs  repository_state.rs  settings_state.rs
crates/gpui/src/components/: layout.rs  mod.rs  node_code_renderer.rs  node_config_menu.rs  node_renderer.rs  sidebar.rs  slash_menu.rs
crates/gpui/src/domain/: mod.rs  ports.rs
crates/gpui/src/domain/database/: document.rs
crates/gpui/src/domain/entities/settings/: mod.rs
crates/gpui/src/entities/: mod.rs  remindr.rs
crates/gpui/src/entities/nodes/: mod.rs
crates/gpui/src/entities/nodes/divider/: data.rs  divider_node.rs
crates/gpui/src/entities/nodes/heading/: data.rs  heading_node.rs
crates/gpui/src/entities/nodes/text/: data.rs
crates/gpui/src/entities/ui/nodes/: mod.rs  (+1 more)
crates/gpui/src/infrastructure/entities/: mod.rs
crates/gpui/src/infrastructure/repositories/: document_repository.rs
crates/gpui/src/screens/: document_screen.rs  home_screen.rs  login_screen.rs  mod.rs
crates/gpui/src/states/: document_state.rs  mod.rs  node_state.rs  settings_state.rs
(+27 files in other folders)
