[package]
name = "remindr_gpui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gpui = "0.2.2"
gpui-component = { version = "0.4.2", features = ["webview"] }
gpui-router = "0.2.6"
rust-embed = "8.7.2"
serde = "1.0.228"
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v7"] }
